# JARVIS

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CREDITS_CHECKLIST.md  DESIGN_HANDOFF.md  Dockerfile.stream  MULTI_AGENT_EXECUTION_PLAN.md  PRD.md  README.md  SYSTEM_DESIGN.md  TASKS.md  TECH_DOC.md  export_onnx.py  requirements_stream.txt  stream_processor.py
.claude/: CLAUDE.md  ecc-tools.json  identity.json
.codex/: AGENTS.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  (+3 more)
HumanDetection/: human_detection.py
backend/: Dockerfile  config.py  demo.py  env_check.py  main.py  pipeline.py  pyproject.toml  schemas.py  tasks.py
backend/agents/: __init__.py  account_manager.py  agentmail_client.py  browser_agent.py  cloud_skills.py  darkweb_agent.py  deep_researcher.py  google_agent.py  instagram_agent.py  linkedin_agent.py  models.py  orchestrator.py  osint_agent.py  social_agent.py  twitter_agent.py  url_scraper_agent.py
backend/capture/: audio_handler.py  frame_extractor.py  frame_handler.py  service.py  telegram_bot.py  webhook.py
backend/db/: __init__.py  convex_client.py  memory_gateway.py
backend/enrichment/: __init__.py  exa_client.py  models.py  sixtyfour_client.py
backend/eval/: __init__.py  hud_eval.py
backend/identification/: __init__.py  detector.py  embedder.py  human_detector.py  models.py  pimeyes.py  reverse_search.py  search_manager.py
backend/memory/: __init__.py  supermemory_client.py
backend/observability/: __init__.py  laminar.py
backend/scripts/: benchmark_swarm.py  create_platform_accounts.py
backend/specter_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/synthesis/: __init__.py  anthropic_engine.py  connections.py  engine.py  models.py
backend/tests/: test_adapters.py  test_agents.py  test_anthropic_engine.py  test_anthropic_live.py  test_browser_use_e2e.py  test_capture.py  test_clients.py  test_config.py  test_connections.py  test_enrichment_synthesis.py  test_face_search.py  test_health.py  test_identify_endpoint.py  test_integration.py  test_models.py  test_pipeline.py  test_pipeline_e2e.py  test_pipeline_stitched.py  test_services.py  test_webhook.py
frontend/: .env.example  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
scripts/: com.specter.keepalive.plist  daemonize_server.py  keepalive_watchdog.sh  process_watchdog.py  setup_sandbox_watchdog.sh  start_watchdog.sh  swarm-launch.sh
static/: viewer.html  watch.html
(+59 files in other folders)
