[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specter-backend"
version = "0.1.0"
description = "FastAPI control plane for the SPECTER YC hackathon project"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "loguru>=0.7.3",
  "pydantic-settings>=2.10.1",
  "python-multipart>=0.0.20",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.1",
  "ruff>=0.12.11",
]

[tool.setuptools]
py-modules = ["config", "main", "schemas", "tasks"]
packages = ["agents", "capture", "db", "enrichment", "identification", "observability", "synthesis"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
